Commit al master del blogpost en su version mas resiente

--- a/Articulo.html
+++ b/Articulo.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/style.css">
-    <title>Document</title>
+<title>El titulo del post</title>
+<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <h1> Aquie vamos a hacer Blog Post</h1>
-    <p>Y este es el parrfor de inicio</p>
+<div id="container">
+<div id="cabecera">
+Cabecera
+</div>
+<div id="post">
+<h1>Este es el título atractivo e interesante del post</h1>
+<p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+</div>
+</div>
 </body>
 </html>
