--- a/Articulo.html
+++ b/Articulo.html
@@ -6,7 +6,7 @@
 <body>
 <div id="container">
 <div id="cabecera">
-MI BLOG DE CABECERA PARA CONFLICTO
+MI BLOG DE CABECERA PARA CONFLICTOs
 </div>
 <div id="post">
 <h1>Este es el título atractivo e interesante del post</h1>
