Cambios para prueba SSH
PRUEBA

--- a/Articulo.html
+++ b/Articulo.html
@@ -6,7 +6,7 @@
 <body>
 <div id="container">
 <div id="cabecera">
-MI BLOG DE CABECERA PARA CONFLICTOs
+MI BLOG DE CABECERA PARA CONFLICTOS 2.0
 </div>
 <div id="post">
 <h1>Este es el título atractivo para mi blogpost</h1>
