--- a/Articulo.html
+++ b/Articulo.html
@@ -1,15 +1,17 @@
 <html>
 <head>
-<title>El titulo del post</title>
+<title>Bienvenido a Hyperblog 2.0</title>
 <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 <div id="container">
 <div id="cabecera">
-MI BLOG DE CABECERA PARA CONFLICTOS 3.0
+<img id="logo" src="Img/medico.jpg" />
+Hyperblog
+<span id="tagline">Tu blog de cabecera</span>
 </div>
 <div id="post">
-<h1>Este es el título atractivo para mi blogpost</h1>
+<h1>Este es el título atractivo e interesante del post</h1>
 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
 <p>Suscribete y dale like</p>
