cambio en la estrucutura del main

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <header >
     <div class="navbar">
     <div class="logo_navbar">
-      <img src="./ChatGPT Image 2 jul 2025, 14_59_25 (1).png" alt="">
+      <img src="./imagenes/ChatGPT Image 2 jul 2025, 14_59_25 (1).png" alt="">
     </div>
 
     <div class="navbar_menu">
@@ -31,13 +31,27 @@
     </div>
 
     <div class="Contenedor_imagenes" >
-      <img class="animacion" src="./cosecha2.jpg" alt="">
+      <img class="animacion" src="./imagenes/cosecha2.jpg" alt="">
     </div>
 
     </header>
 
-    <main>
+    <main class="Main_container">
 
+        <div class="Main_informacion">
+             <div class="Main_informacion_texto">
+              <span>¿Quienes Somos?</span>
+              <p>Con más de 40 años de experiencia, somos tu destino confiable para plantas ornamentales, árboles nativos, diseño y mantenimiento de jardines, y fabricación de materas de calidad. Con puntos de venta en Suba-Cota y Cota-Chía, y cultivos en Fusagasugá, estamos cerca de ti. Ofrecemos ventas al por mayor y estamos listos para embellecer tu espacio verde. Contáctanos hoy y deja que Las Palmas y Jardines de Manuel SAS hagan florecer tus sueños.</p>
+             </div>
+
+             <div class="Main_informacion_img">
+                   <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=861,h=575,fit=crop/mp8nzwbbO2FV5xe0/imagen-de-whatsapp-2025-01-03-a-las-11.56.42_2e9ccde1-mp8qe0kPPxHVpnQn.jpg" alt="">
+             </div>
+        </div>
+
+        <div class="Main_catalogo">
+            
+        </div>
     </main>
     <footer>
 
