cambios completados en el main

--- a/Index.html
+++ b/Index.html
@@ -36,23 +36,31 @@
 
     </header>
 
-    <main class="Main_container">
+    <main class="main-container">
 
-        <div class="Main_informacion">
-             <div class="Main_informacion_texto">
-              <span>¿Quienes Somos?</span>
-              <p>Con más de 40 años de experiencia, somos tu destino confiable para plantas ornamentales, árboles nativos, diseño y mantenimiento de jardines, y fabricación de materas de calidad. Con puntos de venta en Suba-Cota y Cota-Chía, y cultivos en Fusagasugá, estamos cerca de ti. Ofrecemos ventas al por mayor y estamos listos para embellecer tu espacio verde. Contáctanos hoy y deja que Las Palmas y Jardines de Manuel SAS hagan florecer tus sueños.</p>
-             </div>
+  <!-- Sección: ¿Quiénes somos? -->
+  <section class="seccion quienes-somos">
+    <div class="contenido">
+      <div class="texto">
+        <h2>¿Quiénes Somos?</h2>
+        <p>
+          Con más de 40 años de experiencia, somos tu destino confiable para plantas ornamentales, árboles nativos, diseño y mantenimiento de jardines, y fabricación de materas de calidad. Con puntos de venta en Suba-Cota y Cota-Chía, y cultivos en Fusagasugá, estamos cerca de ti. Ofrecemos ventas al por mayor y estamos listos para embellecer tu espacio verde. Contáctanos hoy y deja que Las Palmas y Jardines de Manuel SAS hagan florecer tus sueños.
+        </p>
+      </div>
 
-             <div class="Main_informacion_img">
-                   <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=861,h=575,fit=crop/mp8nzwbbO2FV5xe0/imagen-de-whatsapp-2025-01-03-a-las-11.56.42_2e9ccde1-mp8qe0kPPxHVpnQn.jpg" alt="">
-             </div>
-        </div>
+      <div class="imagen">
+        <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=861,h=575,fit=crop/mp8nzwbbO2FV5xe0/imagen-de-whatsapp-2025-01-03-a-las-11.56.42_2e9ccde1-mp8qe0kPPxHVpnQn.jpg" alt="Imagen de empresa">
+      </div>
+    </div>
+  </section>
 
-        <div class="Main_catalogo">
-            
-        </div>
-    </main>
+  <!-- Sección: Catálogo (vacía por ahora) -->
+  <section class="seccion catalogo">
+    <!-- Aquí puedes agregar tu catálogo más adelante -->
+  </section>
+
+</main>
+
     <footer>
 
     </footer>
