productos terminado y una parte del mapa falta el footer

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libertinus+Mono&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -55,8 +56,41 @@
   </section>
 
   <!-- Sección: Catálogo (vacía por ahora) -->
-  <section class="seccion catalogo">
+  <section class="seccion_catalogo">
+    <div class="texto_catalogo">
+      <h2>Descubre Nuestros Productos🌿</h2>
+    </div>
     <!-- Aquí puedes agregar tu catálogo más adelante -->
+     
+  <div class="catalogo-container">
+  <div id="catalogo" class="catalogo"></div>
+  <div class="catalogo_paginacion">
+    <button id="anterior"></button>
+    <div class="paginacion" id="paginacion"></div>
+    <button id="siguiente"></button>
+  </div>
+  </div>
+  </section>
+
+  <section class="seccion_punto_venta">
+    <div class="texto_punto_venta">
+      <h2>Punto de Venta 📍</h2>
+    </div>
+    
+    <div class="mapa_punto_venta">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.880379282534!2d-73.14624570000001!3d7.2544528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e6813d1c28d09d9%3A0xbb84f53c4d6ac94!2sVivero%20Villa%20Juliana!5e0!3m2!1ses-419!2sco!4v1752126752847!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
+    </div>
+
+    <div lass="texto_punto_venta_horario">
+        <h3>Rionegro Santander</h2>
+        <h4>Horario</h4>
+        <p>
+          Lunes a Sabado
+        </p>
+        <p>
+           7am - 5pm
+        </p>
+    </div>
   </section>
 
 </main>
