cambio del nombre del index puse la i minuscula

--- a/Index.html
+++ b/Index.html
@@ -65,6 +65,11 @@
     </div>
   </section>
 
+  <section class="fade-in-section">
+  <img src="tu-imagen.jpg" alt="Ejemplo">
+  <p>Este texto aparecerá con animación al hacer scroll</p>
+</section>
+
   <!-- Sección: Catálogo (vacía por ahora) -->
   <section class="seccion_catalogo">
     <div class="texto_catalogo">
