responsive cambios avanzados

--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Libertinus+Mono&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Document</title>
-    <div id="fb-root"></div>
+
     <script async defer crossorigin="anonymous"
       src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v18.0" nonce="miNonce123">
     </script>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="Contenedor_imagenes" >
-      <img class="animacion" src="./imagenes/cosecha2.jpg" alt="">
+      <img class="animacion" src="./imagenes/11.webp" alt="">
     </div>
 
     </header>
@@ -60,7 +60,8 @@
       <div class="texto">
         <h2>¿Quiénes Somos?</h2>
         <p>
-          Con más de 40 años de experiencia, somos tu destino confiable para plantas ornamentales, árboles nativos, diseño y mantenimiento de jardines, y fabricación de materas de calidad. Con puntos de venta en Suba-Cota y Cota-Chía, y cultivos en Fusagasugá, estamos cerca de ti. Ofrecemos ventas al por mayor y estamos listos para embellecer tu espacio verde. Contáctanos hoy y deja que Las Palmas y Jardines de Manuel SAS hagan florecer tus sueños.
+          Con más de 40 años de experiencia, somos tu destino confiable para plantas ornamentales, 
+          árboles nativos, diseño y mantenimiento de jardines, y fabricación de materas de calidad. Con puntos de venta en Suba-Cota y Cota-Chía, y cultivos en Fusagasugá, estamos cerca de ti. Ofrecemos ventas al por mayor y estamos listos para embellecer tu espacio verde. Contáctanos hoy y deja que Las Palmas y Jardines de Manuel SAS hagan florecer tus sueños.
         </p>
       </div>
 
@@ -97,9 +98,9 @@
       <h2>Punto de Venta 📌</h2>
     </div>
     
-    <!-- <div class="mapa_punto_venta">
+    <div class="mapa_punto_venta">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.880379282534!2d-73.14624570000001!3d7.2544528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e6813d1c28d09d9%3A0xbb84f53c4d6ac94!2sVivero%20Villa%20Juliana!5e0!3m2!1ses-419!2sco!4v1752126752847!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
-    </div> -->
+    </div>
 
     <div class="texto_punto_venta_horario">
         <h3>Rionegro Santander</h2>
