primer paso menu desplegable

--- a/prueba.html
+++ b/prueba.html
@@ -7,19 +7,18 @@
     <link rel="stylesheet" href="./prueba.css">
 </head>
 <body>
-<header>
-  <div class="menu-toggle" id="menu-toggle">
-    <span></span>
-    <span></span>
-    <span></span>
+<header class="header">
+  <div class="header-content">
+    <h1>Mi Sitio</h1>
+    <button id="menu-btn">☰</button>
   </div>
-
-  <nav class="menu" id="menu">
+  <nav class="menu">
     <a href="#">Inicio</a>
     <a href="#">Servicios</a>
     <a href="#">Contacto</a>
   </nav>
 </header>
+
 
 <script src="./prueba.js"></script>
 </body>
